Revert "Fix mobile layout issues, hopefully"
This reverts commit a3eae4b2063bfbcef65c46a747b484e7c547f32d.

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -112,10 +112,3 @@ main {
     padding-left: 0;
   }
 }
-body{
-  max-width:100%;
-}
-.navbar{
-  max-width:100%;
-}
-html,body{overflow-x: hidden;}
